# lollypop-portal

./: .gitignore  Makefile.am  README.md  configure.ac  lollypop-portal  lollypop-portal.in  meson.build  meson_post_install.py  org.gnome.Lollypop.Portal.service
